<resources>
    <!--    Basics  -->
    <string name="app_name">KG Werkstücke</string>
    <string name="action_settings">Einstellungen</string>

    <!--   labels  -->
    <string name="txt_server">Server</string>
    <string name="txt_port">Port</string>
    <string name="txt_username">Benutzername</string>
    <string name="txt_passwort">Passwort</string>
    <string name="txt_plant">AnlageNr</string>
    <string name="txt_subproject">UnterprojektNr</string>
    <string name="txt_number">Nummer</string>

    <!--   Hints  -->
    <string name="hint_server">https://Serveraddresse</string>
    <string name="hint_port">Port</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_password">Passwort</string>

    <string name="hint_number">719</string>
    <string name="hint_subProjectNumber">11</string>
    <string name="hint_plantNumber">17935</string>

    <!--   Button Text  -->
    <string name="button_ok">OK</string>
    <string name="button_save">Speichern</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_end">Programmende</string>
    <string name="button_book_finishing">Buchen Veredelung</string>
    <string name="button_book_packaging">Buchen Verpackung</string>
    <string name="button_book_shipping">Buchen Versand</string>
    <string name="button_settings">Einstellungen</string>
    <string name="button_select">Auswahl</string>
    <string name="button_continue">Weiter</string>
    <string name="button_back">Zurück</string>


    <!--  Error Handling & error dialog messages  -->
    <string name="errTitle">Fehler</string>
    <string name="errBackPressNavi">Zurück navigation nicht möglich.</string>
    <string name="errEmpty_not_saved">Änderungen nicht gespeichert.</string>
    <string name="errUnknown">Es ist ein unbekannter Fehler aufgetreten.</string>
    <string name="errUnauthorized">Der aktuelle Benutzer ist nicht authoriziert.</string>
    <string name="errWSTNotFound">Das angegebene Werkstück konnte nicht gefunden werden.</string>
    <string name="errNotfound">Der Service kann nicht gefunden werden.</string>
    <string name="errNo_service">Der Endpunkt ist nicht verfügbar.</string>
    <string name="errNo_settings">Einstellungen nicht gesetzt.</string>
    <string name="errOrderUnassignable">Buchung nicht zuordbar.</string>

    <string name="empty_server">Bitte geben Sie einen Server an.</string>
    <string name="invalid_server">Bitte geben Sie eine Serveraddresse im Format "http(s)://" an.</string>
    <string name="empty_port">Bitte geben Sie einen Port an.</string>
    <string name="empty_username">Bitte geben Sie einen Benutzernamen an.</string>
    <string name="empty_password">Bitte geben Sie ein Passwort an.</string>
    <string name="passwordNotMatching">Das Passwort ist nicht valide.</string>
    <string name="toshort_password">Das Passwort ist zu kurz.</string>
    <string name="invalid_validation_server">Bitte Server mit "https://" angeben.</string>
    <string name="error_format_invalid">Falsches Format, bitte Emailformat verwenden.</string>
    <string name="error_portformat_invalid">Falsches Format, bitte Emailformat verwenden.</string>
    <string name="error_too_short">Der Text ist zu kurz.</string>
    <string name="password_too_short">Password zu kurz.</string>
    <string name="error_port">Ungültiger Port.</string>
    <string name="username_too_short">Benutzername zu kurz.</string>
    <string name="validation_failed">Validierung fehlgeschlagen.</string>

    <!--  Success messages  -->
    <string name="settings_saved">Einstellungen wurden erfolgreich gespeichert.</string>

    <!-- Permissions -->
    <string name="no_camera_permisssion">Keine Kamera Berechtigung.</string>
    <string name="no_internet_permisssion">Keine Internet Berechtigung.</string>

</resources>
